<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_about"
            android:showAsAction="never"
            android:title="@string/action_label_about"/>
    <item
            android:id="@+id/menu_rate_us"
            android:showAsAction="never"
            android:title="@string/action_label_rate_us"/>
    <item
            android:id="@+id/menu_share_on_facebook"
            android:showAsAction="never"
            android:title="@string/action_label_share_on_facebook"/>
    <item
            android:id="@+id/menu_share_on_twitter"
            android:showAsAction="never"
            android:title="@string/action_label_share_on_twitter"/>
    <item
            android:id="@+id/menu_settings"
            android:showAsAction="never"
            android:title="@string/action_label_settings"/>
</menu>